tests/NormalTests/paczka2/big_fuzzy/84297899.err
Error in line 9: prUnMVz A191 49,4
Error in line 13: q5vR2N A191 62,6
Error in line 5: d5rt8 A959 79,1
Error in line 14: q5vR2N A959 61,8
Error in line 20: prUnMVz A959 51,4
Error in line 26: MSvczPMO9 A95 75,3
Error in line 17: q5vR2N A884 24,2
Error in line 33: q5vR2N A191 87,0
Error in line 44: A884 A959 18,6
Error in line 47: A884 A945 87,8
Error in line 56: prUnMVz A959 49,89
Error in line 58: prUnMVz A959 110,3
Error in line 62: prUnMVz A945 33,0
Error in line 75: NEjzrf A959 97,8
Error in line 83: A884 A959 87,5
Error in line 81: prUnMVz A945 6,4
Error in line 94: prUnMVz A959 14,0
Error in line 91: 01A A884 13,2
Error in line 95: prUnMVz A945 21,2
Error in line 99: prUnMVz A959 95,7
Error in line 100: prUnMVz A884 87,2
Error in line 111: 01A A959 61,88
Error in line 102: prUnMVz A191 38,3
Error in line 113: prUnMVz A884 0,5
Error in line 119: q5vR2N A884 20,4
Error in line 121: q5vR2N A959 -2,2
Error in line 122: MSvczPMO9 A191 94,2
Error in line 123: MSvczPMO9 A959 74,3
Error in line 120: q5vR2N A959 89,5
Error in line 106: 01A A191 54,4
Error in line 128: 01A A959 102,0
Error in line 167: prUnMVz A884 50,7
Error in line 164: MSvczPMO9 A191 88,9
Error in line 168: prUnMVz A959 41,7
Error in line 170: MSvczPMO9 A945 76,6
Error in line 175: MSvczPMO9 A884 94,9
Error in line 171: NEjzrf A959 74,0
Error in line 187: NEjzrf A191 65,%
Error in line 188: prUnMVz A959 74,0
Error in line 189: prUnMVz A884 22,2
Error in line 192: 01A A884 40,3
Error in line 191: A884 A191 59,8
Error in line 197: A884 A959 62,0
Error in line 193: prUnMVz A191 71,5
Error in line 203: MSvczPMO9 A191 102,5
Error in line 198: A884 A191 6,8
Error in line 208: A884 A959 34,7
Error in line 179: q5vR2N A191 53,8
Error in line 239: MSvczPMO9 A191 69,8
Error in line 240: MSvczPMO9 A945 33,8
